# fqkit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: aa.txt  barcode.list  mini2k.fq.bz2  mini2k.fq.xz  remove.sh  rm.id  summary.txt  xx.fq
src/: barcode.rs  check.rs  command.rs  concat.rs  error.rs  errors.rs  fastq.rs  filter.rs  flatten.rs  fq2fa.rs  fq2sam.rs  fqscore.rs  gcplot.rs  grep.rs  join.rs  length.rs  logger.rs  main.rs  mask.rs  merge.rs  plot.rs  range.rs  remove.rs  rename.rs  reverse.rs  search.rs  select.rs  shuffle.rs  size.rs  slide.rs  sort.rs  split.rs  split2.rs  stats.rs  subfq.rs  tail.rs  top.rs  trimfq.rs  utils.rs  view.rs
src/cli/: barcode.rs  check.rs  concat.rs  cutadapter.rs  filter.rs  flatten.rs  fq2fa.rs  fq2sam.rs  fqscore.rs  gcplot.rs  grep.rs  join.rs  kmer.rs  length.rs  mask.rs  merge.rs  misc.rs  mod.rs  plot.rs  range.rs  remove.rs  rename.rs  reverse.rs  search.rs  select.rs  shuffle.rs  size.rs  slide.rs  sort.rs  split.rs  split2.rs  stats.rs  subfq.rs  tail.rs  top.rs  trimfq.rs  view.rs
