[package]
name = "fqkit"
version = "0.4.6"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.77.2"
homepage = "https://github.com/sharkLoc/fqkit"
repository = "https://github.com/sharkLoc/fqkit"
categories = ["Bioinformatics"]
description = "fqkit: a simple and cross-platform program for fastq file manipulation"
keywords = ["fastq", "reads","bio", "hts", "barcode"]
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
bio = "1.5.0"
bzip2 = "0.4.4"
chrono = "0.4.30"
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
colored = "2.0.4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.10.0"
flate2 = "1.0.24"
log = "0.4.20"
lowcharts = "0.5.8"
plotters = "0.3.4"
rand = "0.8.5"
rand_pcg = "0.3.1"
regex = "1.9.5"
rgb = "0.8.36"
term_size = "0.3.2"
textplots = "0.8.4"
thiserror = "1.0.60"
xz2 = "0.1.7"


[profile.release]
strip = true
