[workspace]

[package]
name = "fqkit"
version = "0.4.11"
edition = "2021"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.83.0"
homepage = "https://github.com/sharkLoc/fqkit"
repository = "https://github.com/sharkLoc/fqkit"
categories = ["science"]
description = "fqkit: a simple and cross-platform program for fastq file manipulation"
keywords = ["fastq", "reads","bio", "hts", "barcode"]
readme = "README.md"
license = "GPL-3.0"
exclude = [
    "example/*",
    "doc/*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
bio = "1.5.0"
bzip2 = "0.4.4"
chrono = "0.4.30"
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
colored = "2.0.4"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.10.0"
flate2 = "1.0.24"
log = "0.4.20"
lowcharts = "0.5.8"
nthash = "0.5.1"
num_cpus = "1.16.0"
plotters = "0.3.4"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
regex = "1.9.5"
rgb = "0.8.36"
term_size = "0.3.2"
textplots = "0.8.4"
thiserror = "1.0.60"
xz2 = "0.1.7"


[profile.release]
strip = true
