[workspace]

[package]
name = "fqkit"
version = "0.4.13"
edition = "2024"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.85.0"
homepage = "https://github.com/sharkLoc/fqkit"
repository = "https://github.com/sharkLoc/fqkit"
categories = ["science::bioinformatics::sequence-analysis","command-line-utilities"]
description = "fqkit: a simple and cross-platform program for fastq file manipulation"
keywords = ["fastq", "reads","bio", "hts", "barcode"]
readme = "README.md"
license = "GPL-3.0"
exclude = [
    "example/*",
    "doc/*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.97"
bio = "2.2.0"
bzip2 = "0.6.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.10.2"
flate2 = "1.1.0"
log = "0.4.26"
lowcharts = "0.5.8"
num_cpus = "1.16.0"
paraseq = "0.1.5"
parking_lot = "0.12.3"
plotters = "0.3.7"
rand = "0.9.0"
rand_pcg = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
rgb = "0.8.36"
term_size = "0.3.2"
textplots = "0.8.7"
thiserror = "2.0.12"
xz2 = "0.1.7"


[profile.release]
strip = true
